--- a/cart.html
+++ b/cart.html
@@ -40,49 +40,45 @@
   <!-- En tête de page avec sa navbar dépliante -->
   <header class="px-4 py-3">
     <div class="new-width">
-      <navbar>
-        <div class="collapse bg-pinkORI" id="navbarHeader">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-8 col-md-7 py-4">
-                <h2 class="text-black">À propos</h2>
-                <p class="orangeORI"><em>Orinoco est un site e-commerce de vente de produits en
-                    ligne</em>.
-                </p>
-              </div>
-              <div class="col-sm-4 offset-md-1 py-4">
-                <h2 class="text-black">Liens</h2>
-                <ul class="list-unstyled">
-                  <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                  <li><a href="cart.html" class="purpleORI disable-link"><em>Votre
-                        panier</em></a>
-                  </li>
-                </ul>
-              </div>
+      <div class="collapse bg-pinkORI" id="navbarHeader">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-8 col-md-7 py-4">
+              <h2 class="text-black">À propos</h2>
+              <p class="orangeORI"><em>Orinoco est un site e-commerce de vente de produits en
+                  ligne</em>.
+              </p>
+            </div>
+            <div class="col-sm-4 offset-md-1 py-4">
+              <h2 class="text-black">Liens</h2>
+              <ul class="list-unstyled">
+                <li><a href="index.html" class="purpleORI disable-link" style="font-size: 1.5rem;"><em>Accueil</em></a>
+                </li>
+                <li><a href="cart.html" class="purpleORI disable-link" style="font-size: 1.5rem;"><em>Votre
+                      panier</em></a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
-        <div class="navbar navbar-dark bg-pinkORI box-shadow">
-          <div class="container d-flex justify-content-between">
-            <a href="#" class="navbar-brand d-flex align-items-center">
-              <a class="navbar-brand" href="index.html">
-                <img class="ms-3" src="images/logo-orinoco.jpg" href="index.html" title="titre du site e-commerce"
-                  alt="vente internationale, meilleurs achats, site web, proposition de produits" />
-              </a>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
-              aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
+      </div>
+      <div class="navbar navbar-dark bg-pinkORI box-shadow">
+        <div class="container d-flex justify-content-between">
+          <div class="align-items-center"></div>
+          <a href="index.html" class="navbar-brand">
+            <img class="ms-3" src="images/logo-orinoco.jpg" title="titre du site e-commerce"
+              alt="vente internationale, meilleurs achats, site web, proposition de produits" />
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
+            aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
         </div>
-      </navbar>
-    </div>
+      </div>
   </header>
 
   <main>
     <!-- Ajout du panier de paiement par carte -->
-    <section>
       <section class="container p-4 bg-pinkORI mb-4"
         style="padding: 1rem; box-sizing: border-box; border-width: 0; border-style: solid; border-color: #e5e7eb;">
         <h2 class="text-lg font-bold mb-3">Panier des produits à régler :</h2>
@@ -107,81 +103,48 @@
       <section>
         <div class="container bg-pinkORI mt-4 p-4">
           <h2>Formulaire pour passer commande :</h2>
-          <form action="confirmation.html" method="GET" onsubmit="return validationForm()" class="needs-validation" novalidate>
+          <form class="needs-validation" id="cart-form" novalidate>
             <div class="form-row">
               <div class="col-md-4 mb-3">
                 <label for="prenom">Prénom</label>
-                <input onkeypress="return /[^0-9]+/.test(event.key)" type="text" class="form-control" id="prenom" onblur="checkprenom()" name="prenom" placeholder="Pierre" required>
-                <div class="valid-feedback">Okay !</div>
-                <div class="invalid-feedback">Valeur incorrecte</div>
+                <input onkeypress="return /[^0-9]+/.test(event.key)" type="text" class="form-control" id="prenom"
+                  onblur="checkprenom()" name="prenom" placeholder="Pierre" required>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="nom">Nom de famille</label>
-                <input onkeypress="return /[^0-9]+/.test(event.key)" type="text" class="form-control" id="nom" name="nom" placeholder="Giraud" required>
-                <div class="valid-feedback">Okay !</div>
-                <div class="invalid-feedback">Valeur incorrecte</div>
+                <input onkeypress="return /[^0-9]+/.test(event.key)" type="text" class="form-control" id="nom"
+                  name="nom" placeholder="Giraud" required>
               </div>
-            <div class="form-group col-md-4 mb-3">
-              <label for="email">Entrez votre mail</label>
-              <input type="email" class="form-control" id="email" name="email" placeholder="pierre.giraud@edhec.com" required>
-              <div class="valid-feedback">Okay !</div>
-              <div class="invalid-feedback">Valeur incorrecte</div>
-            </div>
-            <div class="form-row">
-              <div class="col-md-4 mb-3">
-                <label for="ville">Ville</label>
-                <input onkeypress="return /[^0-9]+/.test(event.key)" type="text" class="form-control" id="ville" name="ville" placeholder="Ville" required>
-                <div class="valid-feedback">Okay !</div>
-                <div class="invalid-feedback">Valeur incorrecte</div>
+              <div class="form-group col-md-4 mb-3">
+                <label for="email">Entrez votre mail</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="pierre.giraud@edhec.com"
+                  required>
               </div>
-              <div class="col-md-4 mb-3">
-                <label for="pays">Pays</label>
-                <input onkeypress="return /[^0-9]+/.test(event.key)" type="text" class="form-control" id="pays" name="pays" placeholder="Pays" required>
-                <div class="valid-feedback">Okay !</div>
-                <div class="invalid-feedback">Valeur incorrecte</div>
+              <div class="form-row">
+                <div class="col-md-4 mb-3">
+                  <label for="address">Adresse</label>
+                  <input type="text" class="form-control" id="address" name="address" placeholder="Adresse" required>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <label for="ville">Ville</label>
+                  <input onkeypress="return /[^0-9]+/.test(event.key)" type="text" class="form-control" id="ville"
+                    name="ville" placeholder="Ville" required>
+                </div>
               </div>
-              <div class="col-md-4 mb-3">
-                <label for="cp">Code postal</label>
-                <input onkeypress="return /[0-9]+/.test(event.key)" type="text" class="form-control" id="cp" name="cp" placeholder="Code postal" required>
-                <div class="valid-feedback">Okay !</div>
-                <div class="invalid-feedback">Valeur incorrecte</div>
+              <div class="form-group">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="cgu" required>
+                  <label class="form-check-label" for="cgu">J'accepte les conditions générales d'utilisation et de
+                    vente</label>
+                  <div class="invalid-feedback">Vous devez accepter les CGU pour continuer</div>
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="cgu" required>
-                <label class="form-check-label" for="cgu">J'accepte les conditions générales d'utilisation et de
-                  vente</label>
-                <div class="invalid-feedback">Vous devez accepter les CGU pour continuer</div>
-              </div>
-            </div>
               <button class="btn bg-purpleORI text-white mt-2 ms-2" type="submit">
                 Envoyer le formulaire au site !
               </button>
-            <!-- <button onclick="myButton()">Envoyer le formulaire au site !</button>
-            <a href=""><button  type="submit">
-                Envoyer le formulaire au site !
-              </button></a> -->
+            </div>
           </form>
         </div>
-        <script>
-          /* La fonction principale de ce script est d'empêcher l'envoi du formulaire si un champ a été mal rempli et d'appliquer les styles de validation aux différents éléments de formulaire */
-          (function () {
-            'use strict';
-            window.addEventListener('load', function () {
-              let forms = document.getElementsByClassName('needs-validation');
-              let validation = Array.prototype.filter.call(forms, function (form) {
-                form.addEventListener('submit', function (event) {
-                  if (form.checkValidity() === false) {
-                    event.preventDefault();
-                    event.stopPropagation();
-                  }
-                  form.classList.add('was-validated');
-                }, false);
-              });
-            }, false);
-          })();
-        </script>
       </section>
   </main>
 
