--- a/confirmation.html
+++ b/confirmation.html
@@ -88,17 +88,19 @@
         <br>
         <p class="display-5 text-center text-4xl font-bold mb-4 bg-pinkORI" id="msg">
             Bonjour <strong id="name"></strong>,
+            <!-- Gestion JS fonction 1 -->
             <br />
             Nous vous remercions pour vos achats !
         </p>
         <br>
         <p class="display-6 text-center text-xl mb-4 bg-pinkORI">Prix total : <strong id="total-price"></strong></p>
+        <!-- Gestion JS fonction 2 -->
         <br>
         <p class="display-6 text-center text-xl mb-4 bg-pinkORI">Voici l'identifiant de votre commande :
             <br>
             <strong id="id-com"></strong></p>
+            <!-- Gestion JS fonction 3 -->
             <br>
-        <!-- Ici attribuer l'identifiant de commande propre et afficher le prix total -->
 
         <br>
         <div class="text-center">
